--- a/src/pages/blog/post-details.module.css
+++ b/src/pages/blog/post-details.module.css
@@ -1,4 +1,4 @@
 .photo-credit-text {
-    font-size: .6em;
+    font-size: .8em;
     color: #FF0000;
 }
